--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -13,13 +13,14 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  -->
-
+-->
 <resources>
 
     <string name="app_name">Emojicon Example</string>
     <string name="action_settings">Settings</string>
     <string name="hint">Type emoji here</string>
     <string name="i_love_emojicon">I \ue32d emojicon</string>
+    <string name="title_activity_show">ShowActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
